--- a/proj2.html
+++ b/proj2.html
@@ -17,9 +17,9 @@
     </header>
     <nav>
         <!-- les liens utiles -->
-      <a href="https://">home></a>
-      <a href="https://" >my studies></a>
-      <a href="https://">my contact</a>
+      <a style="color:green ;" href="https://">home></a>
+      <a style="color:hotpink;" href="https://" >my studies></a>
+      <a style="background-color:white ;" href="https://">my contact</a>
     </nav>
     <main>
       <!--home section-->
